log-output/mainfests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output-writer
          image: sathirak/log-output-writer:1
          command: ["/app/main"]  # Fixed command path
          volumeMounts:
            - name: shared-image
              mountPath: /usr/src/app/files
        - name: log-output-reader
          image: sathirak/log-output-reader:1
          command: ["/app/main"]  # Fixed command path
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: shared-image
              mountPath: /usr/src/app/files
      volumes:
        - name: shared-image
          emptyDir: {}
